@@ -113,3 +113,16 @@ INSERT INTO tobject_type_field (id, id_object_type, label, type) VALUES
 (7,1,'File&#x20;system','text');
 
 INSERT INTO `tupdate_settings` VALUES ('customer_key', 'INTEGRIA-FREE'), ('updating_binary_path', 'Path where the updated binary files will be stored'), ('updating_code_path', 'Path where the updated code is stored'), ('dbname', ''), ('dbhost', ''), ('dbpass', ''), ('dbuser', ''), ('dbport', ''), ('proxy', ''), ('proxy_port', ''), ('proxy_user', ''), ('proxy_pass', '');
+
+INSERT INTO tlead_progress (id,name) VALUES 
+(0,'New'), 
+(20,'Meeting arranged'), 
+(40,'Needs discovered'), 
+(60,'Proposal delivered'), 
+(80,'Offer accepted'), 
+(100,'Closed, not response or dead'),
+(101,'Closed, lost'), 
+(102,'Closed, invalid or N/A'), 
+(200,'Closed successfully');
+
+UPDATE tlead_progress SET `id`=0 WHERE `id`=1;
